# RustShaderEngine

./: .gitignore  Cargo.toml  LICENSE  build  run  text.txt
assets/: cube_mesh.json  icosahedron_mesh.json  suzanne.mtl
scenes/: bunny.json  cube_mesh.json  cube_mesh_but_mesh.json  dragon.json  ico_sphere.json  icosahedron_mesh.json  objects.json  roomates.json  sphere.json  sponza.json  suzanne.json
shaders/: fragment.frag  vertex.vert
shaders/includes/: coloring.glsl  defines.glsl  interceptions.glsl  lambertion.glsl  phong.glsl  rayTracing.glsl  rotations.glsl  simpleShading.glsl  sky.glsl  srgb.glsl  structs.glsl  subroutines.glsl  toneMapping.glsl
src/: buffers.rs  frames.rs  main.rs  materials.rs  objectNode.rs  object_editor.rs  object_node.rs  object_tree.rs  objects.rs  renderer_editor.rs  screenMesh.rs  screen_mesh.rs  shader.rs  simple_init.rs  structs.rs  uniforms.rs
src/builders/: material_block_builder.rs  mod.rs  object_block_builder.rs  scene_builder.rs
src/editors/: mod.rs  object_editor.rs  renderer_editor.rs
src/editors/object_editors/: box_editors.rs  mesh_editor.rs  mod.rs  object_editor.rs  sphere_editor.rs  triangle_editor.rs
src/enums/: object.rs  object_type.rs
src/structs/: box_object.rs  combined_uniforms.rs  material.rs  material_block.rs  mod.rs  node.rs  object_block.rs  renderer_data.rs  sphere.rs  triangle.rs  uniform_object.rs
src/structs/imgui/: imgui_data.rs  mod.rs
src/structs/imgui_data/: imgui_data.rs
src/structs/materials/: material.rs  material_block.rs  mod.rs
src/structs/objects/: box_object.rs  mod.rs  (+5 more)
(+17 files in other folders)
