[package]
name = "RustShaderLib"
version = "0.1.0"
edition = "2021"

[dependencies]
glsl-include = "0.3.1"
glutin = "*"
glium = { version = "0.35.0" }
imgui-glium-renderer = "0.13.0"

imgui-winit-support = "0.13.0"
imgui = { version = "0.12.0", features = ["docking"] }
capitalize = "0.3.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
]

